// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/ButtonLink Base 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  font-size: 1rem;
  font-weight: 600;
  color: #7d7d7d;
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c1:hover {
  color: #c4c4c4;
}

<div
  className="c0"
>
  <button
    className="c1"
    color="base"
    data-test="test"
    size="md"
  >
    Text
  </button>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/ButtonLink Secondary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c1:hover {
  color: #513CA3;
}

<div
  className="c0"
>
  <button
    className="c1"
    color="secondary"
    data-test="test"
    size="md"
  >
    Text
  </button>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/ButtonLink Size sm 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 600;
  color: #7d7d7d;
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c1:hover {
  color: #c4c4c4;
}

<div
  className="c0"
>
  <button
    className="c1"
    color="base"
    data-test="test"
    size="sm"
  >
    Text
  </button>
  <div
    className="c2"
  />
</div>
`;
